@@ -147,7 +147,7 @@ name|Config
 import|;
 end_import
 begin_comment
-comment|/**  * Represents content from a specified source, such as TREC, Reuters etc. A  * {@link ContentSource} is responsible for creating {@link DocData} objects for  * its documents to be consumed by {@link ToDeleteDocMaker}. It also keeps track of  * various statistics, such as how many documents were generated, size in bytes  * etc.  *<p>  * Supports the following configuration parameters:  *<ul>  *<li><b>content.source.forever</b> - specifies whether to generate documents  * forever (<b>default=true</b>).  *<li><b>content.source.verbose</b> - specifies whether messages should be  * output by the content source (<b>default=false</b>).  *<li><b>content.source.log.step</b> - specifies for how many documents a  * message should be logged. If set to 0 it means no logging should occur.  *<b>NOTE:</b> if verbose is set to false, logging should not occur even if  * logStep is not 0 (<b>default=0</b>).  *</ul>  */
+comment|/**  * Represents content from a specified source, such as TREC, Reuters etc. A  * {@link ContentSource} is responsible for creating {@link DocData} objects for  * its documents to be consumed by {@link ToDeleteDocMaker}. It also keeps track  * of various statistics, such as how many documents were generated, size in  * bytes etc.  *<p>  * Supports the following configuration parameters:  *<ul>  *<li><b>content.source.forever</b> - specifies whether to generate documents  * forever (<b>default=true</b>).  *<li><b>content.source.verbose</b> - specifies whether messages should be  * output by the content source (<b>default=false</b>).  *<li><b>content.source.encoding</b> - specifies which encoding to use when  * reading the files of that content source. Certain implementations may define  * a default value if this parameter is not specified. (<b>default=null</b>).  *<li><b>content.source.log.step</b> - specifies for how many documents a  * message should be logged. If set to 0 it means no logging should occur.  *<b>NOTE:</b> if verbose is set to false, logging should not occur even if  * logStep is not 0 (<b>default=0</b>).  *</ul>  */
 end_comment
 begin_class
 DECL|class|ContentSource
@@ -267,6 +267,11 @@ DECL|field|verbose
 specifier|protected
 name|boolean
 name|verbose
+decl_stmt|;
+DECL|field|encoding
+specifier|protected
+name|String
+name|encoding
 decl_stmt|;
 DECL|field|csFactory
 specifier|private
@@ -741,6 +746,17 @@ argument_list|(
 literal|"content.source.verbose"
 argument_list|,
 literal|false
+argument_list|)
+expr_stmt|;
+name|encoding
+operator|=
+name|config
+operator|.
+name|get
+argument_list|(
+literal|"content.source.encoding"
+argument_list|,
+literal|null
 argument_list|)
 expr_stmt|;
 block|}
